--- a/notes/sample/nodemenu/cxmenusample.html
+++ b/notes/sample/nodemenu/cxmenusample.html
@@ -87,7 +87,7 @@ function contextMenu() {
     
     menu.items = function(e) {
         if (!arguments.length) return items;
-        for (i in arguments) items.push(arguments[i]);
+        for (i in arguments) {items.push(arguments[i])};
         rescale = true;
         return menu;
     }
